# PyWegowAPI

./: README.md  pyproject.toml
src/: client.py  endpoints.py  parsers.py
src/models/: artist.py  common.py  event.py  full_artist.py  full_event.py  full_venue.py  media.py  venue.py
